version/0.18/_sources/api/ansys/additive/core/index.rst.txt






The ``ansys.additive.core`` library
===================================

.. py:module:: ansys.additive.core


Summary
-------








.. py:currentmodule:: core
.. tab-set::

    .. tab-item:: Subpackages

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.additive.core.examples`
            - Provides utilities for use with PyAdditive examples.


          * - :py:obj:`~ansys.additive.core.parametric_study`
            - Provides data storage and utility methods for a parametric study.


          * - :py:obj:`~ansys.additive.core.server_connection`
            - Server connection definition and utilities.



    .. tab-item:: Submodules

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.additive.core.additive`
            - Provides a client for interacting with the Additive service.


          * - :py:obj:`~ansys.additive.core.conversions`
            - Unit conversion constants and functions.


          * - :py:obj:`~ansys.additive.core.download`
            - Provides a function for downloading files from the server to the client.


          * - :py:obj:`~ansys.additive.core.exceptions`
            - Provides custom exceptions for the additive client.


          * - :py:obj:`~ansys.additive.core.geometry_file`
            - Provides a container for part geometry files.


          * - :py:obj:`~ansys.additive.core.logger`
            - Provides a general framework for logging in PyAdditive.


          * - :py:obj:`~ansys.additive.core.machine`
            - Provides a container for machine parameters.


          * - :py:obj:`~ansys.additive.core.material`
            - Provides a container for material parameters.


          * - :py:obj:`~ansys.additive.core.material_tuning`
            - Provides input and result summary containers for material tuning.


          * - :py:obj:`~ansys.additive.core.microstructure`
            - Provides input and result summary containers for microstructure simulations.


          * - :py:obj:`~ansys.additive.core.microstructure_3d`
            - Provides input and result summary containers for microstructure 3D simulations.


          * - :py:obj:`~ansys.additive.core.misc`
            - Provides miscellaneous utility functions.


          * - :py:obj:`~ansys.additive.core.porosity`
            - Provides input and result summary containers for porosity simulations.


          * - :py:obj:`~ansys.additive.core.progress_handler`
            - Provides progress updates.


          * - :py:obj:`~ansys.additive.core.simulation`
            - Provides common definitions and classes for simulations.


          * - :py:obj:`~ansys.additive.core.single_bead`
            - Provides input and result summary containers for single bead simulations.


          * - :py:obj:`~ansys.additive.core.thermal_history`
            - Provides input and result summary containers for thermal history simulations.









    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~USER_DATA_PATH`
            - Storage path for user data.


          * - :py:obj:`~EXAMPLES_PATH`
            - Storage path for example data.




.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    🖿 examples</api/ansys/additive/core/examples/index>
    🖿 parametric_study</api/ansys/additive/core/parametric_study/index>
    🖿 server_connection</api/ansys/additive/core/server_connection/index>


.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    🗎 additive</api/ansys/additive/core/additive/index>
    🗎 conversions</api/ansys/additive/core/conversions/index>
    🗎 download</api/ansys/additive/core/download/index>
    🗎 exceptions</api/ansys/additive/core/exceptions/index>
    🗎 geometry_file</api/ansys/additive/core/geometry_file/index>
    🗎 logger</api/ansys/additive/core/logger/index>
    🗎 machine</api/ansys/additive/core/machine/index>
    🗎 material</api/ansys/additive/core/material/index>
    🗎 material_tuning</api/ansys/additive/core/material_tuning/index>
    🗎 microstructure</api/ansys/additive/core/microstructure/index>
    🗎 microstructure_3d</api/ansys/additive/core/microstructure_3d/index>
    🗎 misc</api/ansys/additive/core/misc/index>
    🗎 porosity</api/ansys/additive/core/porosity/index>
    🗎 progress_handler</api/ansys/additive/core/progress_handler/index>
    🗎 simulation</api/ansys/additive/core/simulation/index>
    🗎 single_bead</api/ansys/additive/core/single_bead/index>
    🗎 thermal_history</api/ansys/additive/core/thermal_history/index>








Description
-----------


Python client for the Ansys Additive service.
















..
    !! processed by numpydoc !!






Module detail
-------------

.. py:data:: USER_DATA_PATH

   
   Storage path for user data.
















   ..
       !! processed by numpydoc !!

.. py:data:: EXAMPLES_PATH

   
   Storage path for example data.
















   ..
       !! processed by numpydoc !!



